@@ -35,5 +35,20 @@
                 [ 47, 54 ], [ 47, 55 ], [ 47, 56 ], [ 47, 57 ]
             ]
         }
+    ],
+    "elements_to_delete": [
+        {
+            "element_index": 1,
+            "coordinates": [
+                [ 39, 51 ],
+                [ 40, 54 ],
+                [ 41, 52 ], [ 41, 53 ],
+                [ 42, 54 ],
+                [ 43, 55 ],
+                [ 44, 51 ], [ 44, 54 ], [ 44, 54 ],
+                [ 45, 55 ], [ 45, 56 ],
+                [ 46, 56 ], [ 46, 57 ]
+            ]
+        }
     ]
 }
