@@ -8,5 +8,14 @@
                 [ 81, 8 ], [ 82, 7 ], [ 82, 8 ], [ 82, 9 ], [ 83, 8 ], [ 83, 9 ]
             ]
         }
+    ],
+    "elements_to_delete": [
+        {
+            "element_index": 1,
+            "coordinates": [
+                [ 82, 7 ], [ 82, 8 ],
+                [ 83, 9 ]
+            ]
+        }
     ]
 }
